apps/arr/readarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
    - port: 8787
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
